# pystockwatch

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  dependencies-pystockwatch.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pystockwatch/: percent_change.py  pystockwatch.py
tests/: test_percent_change.py  test_pystockwatch.py
