[tool.poetry]
name = "pystockwatch"
version = "0.1.0"
description = "A package which calculates and visualizes the profitability and the volume change of stocks "
authors = ["Affrin Sultana, Helin Wang, Pavel Levchenko, Shi Yan Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
