[tool.poetry]
name = "pystockwatch"
version = "0.1.0"
description = "A package which calculates and visualizes the profitability and the volume change of stocks "
authors = ["Affrin Sultana, Helin Wang, Pavel Levchenko, Shi Yan Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
altair = "^4.2.0"
plotly = "^5.5.0"
yfinance = "^0.1.69"
pandas-datareader = "^0.10.0"
altair-viewer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
